# zk-storage

./: README.md
core/: Cargo.toml
core/src/: storage.rs
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
