[package]
name = "zk-storage-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = { version = "1.0" }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# [dev-dependencies]
# hex = "0.4"
# rand = "0.8"

